...
            ),
            child: DropdownButtonHideUnderline(
              child: DropdownButton<int>(
                value: _selectedBudget,
                isExpanded: true,
                hint: const Text(
                  'Wybierz budżet',
                  style: TextStyle(color: kDarkGrey, fontSize: 16, fontWeight: FontWeight.w600),
                ),
                icon: const Icon(Icons.arrow_drop_down_circle_outlined, color: kDarkGrey, size: 28),
                dropdownColor: kSurfaceLighter,
                style: const TextStyle(color: kDarkGrey, fontSize: 18, fontWeight: FontWeight.w600),
                items: _budgetOptions.map((int value) {
...
                });
              } else {
                await _showFinishDialog();
              }
            },
            child: Text(
              _currentStep < 3 ? 'Dalej' : 'Zakończ',
              style: const TextStyle(color: kWhite, fontSize: 16, fontWeight: FontWeight.bold),
            ),
          ),
        ],
      ),
    );
...
