...
            backgroundColor: kMainBackground,
            appBar: AppBar(
              backgroundColor: kPrimaryDark,
              title: Text(vm.buildName, style: const TextStyle(color: kWhite)),
              actions: [
                IconButton(
                  key: const Key('save_button'),
                  icon: const Icon(Icons.save, color: kWhite),
                  onPressed: () => vm.saveConfiguration(context),
                ),
              ],
            ),
            body: ConfigurationSlotList(
...
