...
      color: kMainBackground,
      shape: RoundedRectangleBorder(
        borderRadius: BorderRadius.circular(16),
        side: const BorderSide(color: kPurple, width: 2),
      ),
      child: InkWell(
        key: const Key('add_build_button'),
        borderRadius: BorderRadius.circular(16),
        onTap: onCreate,
        child: const Center(
          child: Icon(Icons.add, size: 48, color: kPurple),
        ),
      ),
...
