...
    'CPU': 'Procesor',
    'GPU': 'Karta graficzna',
    'RAM': 'Pamięć RAM',
    'MOTHERBOARD': 'Płyta główna',
    'COOLING': 'Chłodzenie',
    'PSU': 'Zasilacz',
    'CASE': 'Obudowa',
    'DISKS': 'Dysk',
  };

  static const Map<String, String> slotImages = {
    'CPU': 'cpu.jpg',
    'GPU': 'gpu.jpg',
...
